@@ -171,7 +171,8 @@ Chronological list of authors
   - Marcelo C. R. Melo
   - Mark D. Driver
   - Kevin Boyd
-
+2022
+  - Atharva Kulkarni
 
 External code
 -------------
